--- a/app-data-service/src/main/resources/application.yaml
+++ b/app-data-service/src/main/resources/application.yaml
@@ -23,6 +23,7 @@ app:
   services:
     profile: http://localhost:8081/profile
     notification: http://localhost:8083/notification
+    payment: http://localhost:8084/payment
 
   #hosted
 #app:
